--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -105,6 +105,11 @@ footer.footer {
   padding-bottom: 2rem;
 }
 
+.navbar-brand{
+  padding-top: 20px;
+  vertical-align: middle;
+}
+
 .navbar.navbar-custom.navbar-fixed-top {
   background: #f0f0f0;
 }
@@ -161,4 +166,166 @@ a.org-header:hover {
 
 .logo-image {
   margin-top: -20px;
+}
+
+input.form-check-input.options {
+    height: 1px;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.left {
+  float: left;
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+
+.right {
+  float: left;
+  position: relative;
+  width: 40%;
+  margin-left: 5%;
+  height: 100%;
+}
+
+#drag-elements {
+  display: block;
+  border-radius: 5px;
+  min-height: 8rem;
+  margin: 0 auto;
+  padding: 2em;
+}
+
+#drag-elements > div {
+  text-align: center;
+  float: left;
+  height: 5rem;
+  line-height: 3em;
+  padding: 1rem;
+  margin: 0 1em 1em 0;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  border-radius: 100px;
+  border: 2px solid #ececec;
+  background: #F7F7F7;
+  transition: all .5s ease;
+}
+
+#drag-elements > div.reset-line-height, #drop-target > div.reset-line-height{
+  line-height: inherit;
+}
+
+#drag-elements > div:active {
+  -webkit-animation: wiggle 0.3s 0s infinite ease-in;
+  animation: wiggle 0.3s 0s infinite ease-in;
+  opacity: .6;
+  border: 2px solid #000;
+}
+
+#drag-elements > div:hover {
+  border: 2px solid gray;
+  background-color: #e5e5e5;
+}
+
+#drop-target {
+  border: 2px dashed #D9D9D9;
+  border-radius: 5px;
+  min-height: 8rem;
+  padding: 1.5em;
+  display: block;
+  text-align: center;
+}
+
+#drop-target > div {
+  height: 5rem;
+  line-height: 3em;
+  transition: all .5s;
+  text-align: center;
+  float: left;
+  padding: 1em;
+  margin: 0 1.4em 0 0;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  /*border: 2px solid skyblue;
+  background: #F7F7F7;*/
+  background: #FF937A;
+  transition: all .5s ease;
+}
+
+#drop-target > div:after {
+  content: "";
+  width: 0;
+  height: 0;
+  top: 1px;
+  position: absolute;
+  border-top: 37px solid transparent;
+  border-left: 13px solid grey;
+  border-bottom: 45px solid transparent;
+  right: -17px;
+}
+
+#drop-target > div:active {
+  -webkit-animation: wiggle 0.3s 0s infinite ease-in;
+  animation: wiggle 0.3s 0s infinite ease-in;
+  opacity: .6;
+  border: 2px solid #000;
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  25% {
+    -webkit-transform: rotate(2deg);
+  }
+  75% {
+    -webkit-transform: rotate(-2deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotate(-2deg);
+  }
+  25% {
+    transform: rotate(2deg);
+  }
+  75% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  padding: 1em;
+}
+.gu-hide {
+  display: none !important;
+}
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+.gu-transit {
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+}
+.gu-mirror {
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
 }
